# AI-Agents-Bootcamp

./: README.md  main.py  pyproject.toml
course/: course.ipynb  pyproject.toml
course/.ipynb_checkpoints/: course-checkpoint.ipynb  d1_course-checkpoint.ipynb
day1_ingest_index_data/course/: pyproject.toml
day1_ingest_index_data/course/.ipynb_checkpoints/: d1_course-checkpoint.ipynb
day1_ingest_index_data/project/: Homework.ipynb
day1_ingest_index_data/project/.ipynb_checkpoints/: Day_1_Ingest_Index_Data-checkpoint.ipynb
project/: Homework.ipynb
